--- a/index.html
+++ b/index.html
@@ -2,98 +2,37 @@
 <html lang="en">
     <head>
         <title>Search</title>
-        <style media="screen">
-
-            body {
-              background:white;
-            }
-
-            .grid {
-                background-color: white;
-                display: grid;
-                padding: 20px;
-                grid-column-gap: 5px;
-                grid-template-columns: auto auto;
-            }
-
-
-            .seearch {
-              margin: 4px;
-              background: darkgrey;
-              border: 2px solid transparent;
-              border-radius: 4px;
-              display: flex;
-              height: 34px;
-              min-width: 0;
-              width: 80px
-              padding-inline-end: 16px;
-              padding-inline-start: 12px;
-              margin: 4px;
-            }
-
-            .seearch:hover {
-              border: solid 2px grey;
-            }
-
-            #iinput {
-              --action-height: 34px;
-              border: solid 2px grey;
-              border-radius: calc(var(--action-height) / 2);
-              display: flex;
-              height: var(--action-height);
-              min-width: 0;
-              width: 500px;
-              outline: none;
-              padding-inline-end: 16px;
-              padding-inline-start: 12px;
-              margin: 4px;
-
-            }
-            #iinput:hover {
-                background-color: darkgrey;
-            }
-
-            .navi {
-              display: inline-block;
-              margin-right: 20px;
-              font-family: Arial;
-            }
-
-            form {
-              display: flex;
-              flex-direction: column;
-              align-items: center;
-            }
-        </style>
+        <link rel="stylesheet" href="./SearchStyles.css">
     </head>
     <body>
         <header >
           <nav >
-            <div style="justify-content:right ; display:flex; background: darkgreen">
+            <div id="naav" >
               <ul>
-                <li class="navi"><a href="https://google.com">Click here!</a></li>
-                <li class="navi"><a href="https://google.com">Click here!</a></li>
+                <li class="navi"><a href="./mapSearch.html">MapSearch</a></li>
+                <li class="navi"><a href="./ImageSearch.html">Image Search</a></li>
+                <li class="navi"><a href="./AdvancedSearch.html">Advanced Search</a></li>
               </ul>
             </div>
           </nav>
         </header>
-          <div style="justify-content:center ; display:flex;">
-            <img src="/Users/jeromecholewa/Documents/Education/EdX CS50/Project 0/googoo.png"
-          alt="googoo" width="300" >
-          </div>
-          <div style=" justify-content:center ; display:flex; background:lightblue; padding:5px">
-            <form action="https://www.google.com/search" >
-                <input id="iinput" type="text" name="q" placeholder="Search Googoo or type a URL";>
-                <div class="grid">
-                  <div class="">
-                    <input class="seearch" type="submit" value="Google Search">
-                  </div>
-                  <div class="">
-                    <input class="seearch" type="submit" value="I'm Feeling Lucky" formaction="https://www.bing.com/search">
-                  </div>
+        <div style="justify-content:center ; display:flex;">
+          <img src="/Users/jeromecholewa/Documents/Education/EdX CS50/Project 0/googooBlack.png"
+        alt="googoo" >
+        </div>
+        <div id="foorm">
+          <form class="index_form" action="https://www.google.com/search" >
+              <input id="iinput" type="text" name="q" placeholder="Search Googoo or type a URL";>
+              <div class="grid">
+                <div >
+                  <input class="seearch" type="submit" value="Google Search">
                 </div>
+                <div >
+                  <button class="seearch" type="submit" name="btnI" formaction="https://google.com/search">I'm Feeling Lucky</button>
+                </div>
+              </div>
 
-            </form>
-          </div>
+          </form>
+        </div>
     </body>
 </html>
