correct path for pictures

--- a/AdvancedSearch.html
+++ b/AdvancedSearch.html
@@ -9,7 +9,7 @@
           <nav >
             <div  id="navGridAdv" >
               <div style="justify-content:left; padding-top:20px;">
-                <img src="/Users/jeromecholewa/Documents/Education/EdX CS50/Project 0/googooBlack.png"
+                <img src="./googooBlack.png"
               alt="googoo" style="height: 45px;">
               </div>
               <div id="naav" >
