--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           </nav>
         </header>
         <div style="justify-content:center ; display:flex;">
-          <img src="/Users/jeromecholewa/Documents/Education/EdX CS50/Project 0/googooBlack.png"
+          <img src="./googooBlack.png"
         alt="googoo" >
         </div>
         <div id="foorm">
