--- a/mapSearch.html
+++ b/mapSearch.html
@@ -16,7 +16,7 @@
           </nav>
         </header>
           <div style="justify-content:center ; display:flex;">
-            <img src="/Users/jeromecholewa/Documents/Education/EdX CS50/Project 0/googooMapsBlack.png"
+            <img src="./googooMapsBlack.png"
           alt="googoo"  >
           </div>
           <div id="foorm">
